--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(pfr_non_boost-master/include
         pfr_non_boost-master/include/pfr/detail
         /usr/local/include)
 
+
 add_executable(ConsoleApplication1
         main.cpp
         pfr_non_boost-master/include/pfr.hpp
@@ -28,6 +29,7 @@ add_executable(ConsoleApplication1
         testm2m.hpp
         testmm2m.hpp
 )
-
+find_package(tabulate CONFIG REQUIRED)
+target_link_libraries(ConsoleApplication1 PRIVATE tabulate::tabulate)
 #find_package(TBB REQUIRED)
 #target_link_libraries(ConsoleApplication1 PUBLIC TBB::tbb)
