--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.22)
 
 cmake_minimum_required(VERSION 3.22)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Wconversion")
-set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -std=c++20")
-set(CMAKE_CXX_FLAGS_RELEASE " -Ofast -std=c++20 -fargument-noalias-global -fomit-frame-pointer -fopenmp -march=native -flto ")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -std=c++23 -fopenmp")
+set(CMAKE_CXX_FLAGS_RELEASE " -Ofast -std=c++23 -fargument-noalias-global -fomit-frame-pointer -fopenmp -march=native -flto ")
 
 project(ConsoleApplication1)
 
@@ -25,8 +25,8 @@ add_executable(ConsoleApplication1
         m2m.hpp
         o2m.cpp
         m2m.cpp
-        test.cpp
-        test.hpp
+        testseque.cpp
+        testseque.hpp
         mm2m.cpp
         symmetries.hpp
         thing.cpp
