--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Wconversion")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -std=c++20 -fopenmp -fbounds-check")
-set(CMAKE_CXX_FLAGS_RELEASE " -Ofast -std=c++20 -ltbb -fno-trapping-math -fassociative-math -fargument-noalias-global -fomit-frame-pointer -fopenmp -march=native -mtune=native  -flto ")
+set(CMAKE_CXX_FLAGS_RELEASE " -Ofast -std=c++20 -fopenmp-simd -ffast-math -ltbb -fno-trapping-math -fassociative-math -fargument-noalias-global -fomit-frame-pointer -fopenmp -march=native -mtune=native  -flto ")
 project(ConsoleApplication1)
 
 include_directories(pfr_non_boost-master/include
