--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ add_executable(ConsoleApplication1
         testmm2m.hpp
         testeo2m.hpp
         outputtoensight.hpp
+        smallvector.hpp
+        hybridvector.hpp
 )
 
 #find_package(TBB REQUIRED)
